--- a/src/portfolio.module.css
+++ b/src/portfolio.module.css
@@ -2,6 +2,13 @@
     padding-right: 20px; /*#su*/
     flex-basis: 33%;
     flex-shrink: 0;
+    display: flex;
+    align-items: center;
+}
+
+/* applies to children of .heading */
+.heading > * {
+    margin-right: 4px;
 }
 
 .subheading {
