--- a/src/portfolio.module.css
+++ b/src/portfolio.module.css
@@ -1,11 +1,11 @@
 .heading {
-    padding-right: 20px; /*#su*/
-    padding-top: 4px;
+    padding-right: 15px; /*#su*/
+    padding-top: 15px;
     padding-bottom: 4px;
     flex-basis: 33%;
     flex-shrink: 0;
     display: flex;
-    align-items: center;
+    /*align-items: center;*/
 }
 
 /* applies to children of .heading */
@@ -15,7 +15,7 @@
 
 .subheading {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
 
 }
 
